--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -2,10 +2,12 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="styles.css">
-    <title>Example App</title>
+    <link rel="stylesheet" href="https://bootswatch.com/5/cerulean/bootstrap.min.css">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <title>Gif Search</title>
 </head>
   <body>
+    {{> navbar}}
     <div class="container">
       {{{body}}}
     </div>
